--- a/package.json
+++ b/package.json
@@ -1,26 +1,16 @@
 {
-	"name": "feedlandServer",
-	"version": "0.4.3",
+	"name": "feedlandShell",
+	"version": "0.4.0",
 	"author": "Dave Winer <dave@scripting.com>",
+	"license": "GPLV2",
 	"main": "feedland.js",
 	"files": [
-		"blog.js"
 		],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/scripting/feedLandInstall.git"
+		},
 	"dependencies" : {
-		"request": "*",
-		"md5": "*",
-		"sanitize-html": "*",
-		"marked": "3.0.8",
-		"daveutils": "*",
-		"davetwitter": "*",
-		"daveappserver": "*",
-		"daverss": "*",
-		"daves3": "*",
-		"nodejs-websocket": "*",
-		"davesql": "*",
-		"reallysimple": "*",
-		"davegithub": "*",
-		"feedlanddatabase": "*",
-		"opml": "*"
+		"feedland": "*"
 		} 
 	}
