--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
 		"debug": false,
 		"flLogQueries": false,
 		"flQueueAllRequests": false,
-		"flUseMySql2": false
+		"flUseMySql2": true
 		},
 	
 	"flUseTwitterIdentity": false,
